--- a/haskell-polynomial-factorer.cabal
+++ b/haskell-polynomial-factorer.cabal
@@ -62,13 +62,13 @@ executable haskell-polynomial-factorer
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: Tests
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.17.2.1
+    build-depends:    base ^>=4.17.2.1, HUnit
 
     -- Directories containing source files.
     hs-source-dirs:   app
