--- a/haskell-polynomial-factorer.cabal
+++ b/haskell-polynomial-factorer.cabal
@@ -62,7 +62,7 @@ executable haskell-polynomial-factorer
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Tests, Defs
+    other-modules: Tests, Defs, Polynomial
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
